Set up cohort 4.
And close out 2 and 3.

--- a/01_The_Big_Bayesian_Picture.Rmd
+++ b/01_The_Big_Bayesian_Picture.Rmd
@@ -230,3 +230,16 @@ This is a list of resources mentioned in the first meeting!
 01:05:06	Oluwafemi Oyedele:	Thank you !!!
 ```
 </details>
+
+
+### Cohort 4
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
