--- a/04_Balance_and_Sequentiality.Rmd
+++ b/04_Balance_and_Sequentiality.Rmd
@@ -154,3 +154,21 @@ summarize_beta_binomial(alpha = 5, beta = 11, y = 50, n = 99) %>%
 ### Cohort 2
 
 `r knitr::include_url("https://www.youtube.com/embed/xjkHan4vbfQ")`
+
+
+### Cohort 3
+
+`r knitr::include_url("https://www.youtube.com/embed/ZjUx0jkLyGM")`
+
+
+### Cohort 4
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
