--- a/08_Posterior_Inference_Prediction.Rmd
+++ b/08_Posterior_Inference_Prediction.Rmd
@@ -33,6 +33,11 @@
 
 ### Cohort 3
 
+`r knitr::include_url("https://www.youtube.com/embed/jInkta2vZnA")`
+
+
+### Cohort 4
+
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
