--- a/09_Simple_Normal_Regression.Rmd
+++ b/09_Simple_Normal_Regression.Rmd
@@ -490,6 +490,11 @@ knitr::include_graphics(
 
 ### Cohort 3
 
+`r knitr::include_url("https://www.youtube.com/embed/Ep24XcQoqi4")`
+
+
+### Cohort 4
+
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
