--- a/10_Evaluating_Regression_Models.Rmd
+++ b/10_Evaluating_Regression_Models.Rmd
@@ -329,6 +329,11 @@ model_elpd$estimates
 
 ### Cohort 3
 
+`r knitr::include_url("https://www.youtube.com/embed/4iYZ046PANY")`
+
+
+### Cohort 4
+
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
