Add 02 to chunk name.

--- a/02_Bayes_Rule.Rmd
+++ b/02_Bayes_Rule.Rmd
@@ -1,6 +1,6 @@
 # Bayes' Rule
 
-```{r load-packages, message=FALSE, echo=FALSE}
+```{r 02-load-packages, message=FALSE, echo=FALSE}
 library(tidyverse)
 library(bayesrules)
 library(janitor)
